<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bike Tracker</string>
    <string name="settings">Settings</string>
    <string name="butStartTracking">Start Tracking</string>
    <string name="butShowTracks">Track History</string>
    <string name="title_activity_track">Track Stats</string>
    <string name="title_dialog">Choose a track name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="noGPS">GPS is not activated</string>
    <string name="noGPSmsg">You need to activate GPS in order to track your movement. Press OK and you will be redirected to the settings of your device.</string>
    <string name="stopTracking">Stop tracking?</string>
    <string name="stopTrackingMsg">Do you really want to stop tracking and return to the start screen of BikeTracker?</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="speed">Speed</string>
    <string name="altitude">Altitude</string>
    <string name="altitudeStatistics">Altitude statistics</string>
    <string name="speedStatistics">Speed statistics</string>
    <string name="distance">Distance</string>
    <string name="traveltime">Travel time</string>
    <string name="title_activity_track_list">List of tracks</string>
    <string name="noTracksInDB">No Tracks so far, go back and record one :)</string>
    <string name="title_activity_track_container">TrackContainerActivity</string>
    <string name="delete">Delete</string>
    <string name="deleteTrack">Delete Track</string>
    <string name="deleteTrackMsg">Do you really want to delete this track?</string>
    <string name="show">Show</string>
    <string name="trackDetailTimeBegin">Begin</string>
    <string name="trackDetailTimeEnd">End</string>
    <string name="altitudeAscend">Ascend</string>
    <string name="altitudeDescend">Descend</string>
    <string name="altitudeMax">Maximum</string>
    <string name="altitudeMin">Minimum</string>
    <string name="speedAverage">Average</string>
    <string name="edit">Edit</string>
    <string name="export">Export</string>
    <string name="exportkml">Export KML</string>
    <string name="exportgpx">Export GPX</string>
    <string name="exportKMLTitle">Exporting Track as KML</string>
    <string name="exportKMLMessage">Writing Track %1$s to sdcard \n Please wait…</string>
    <string name="imgMapHint">Will show a map image"</string>
    <string name="trackEditTitle">Edit Track</string>
    <string name="trackNameEmpty">Track name may not be empty</string>
    <!--units-->
    <string name="unit_meters" translatable="true">m</string>
    <string name="unit_speed">km/h</string>
    <!--preferences-->
    <string name="prefGPS">GPS</string>
    <string name="title_activity_stats">StatsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>