<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">
    <TextView
        android:text="@string/speedStatistics"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/horizontal_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/roundcorners_shadow_laylist">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/altitudeMin"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:text="@string/altitudeMax"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speedAverage"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/value_speed_minvalue"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
            <TextView
                android:id="@+id/value_speed_maxvalue"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                />
            <TextView
                android:id="@+id/value_speed_average"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/unit_speed" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/unit_speed" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/unit_speed" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
